# lab06

./: README.md
.github/workflows/: main.yml  mian.yml
artifacts/: solver_app-0.1.0.0-Darwin.dmg  solver_app-0.1.0.0-Linux.deb  solver_app-0.1.0.0-Linux.rpm  solver_app-0.1.0.0-win64.msi
formatter_ex_lib/: CMakeLists.txt
formatter_lib/: CMakeLists.txt
hello_world_application/: CMakeLists.txt
solver_application/: CMakeLists.txt  CPackConfig.cmake
